# Levitated-Sensor-Detector-Experiment

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-analysis-pipeline.yml  weekly-lock-update.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci-analysis.yml  ci-data.yml  ci.yml
data/manifests/: examples.json  manifest.shema.json
data/schemas/: manifest.schema.json  manifest.shema.json
docs/: Contributing.md  tdms_tools_guide.md
projects/Shelby_cooling_analysis/: analysis_functions.py  tdms_analyzer_SK.py
projects/sample project code/: tdms_tools_ex.ipynb
scripts/: bootstrap.ps1  sha256.py  validate_manifest.py
software/analysis-pipeline/: pyproject.toml
software/analysis-pipeline/src/analysis_pipeline/: __init__.py  tdms_tools.py
software/analysis-pipeline/tests/: test_import.py
