[project]
name = "analysis-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "pandas", "matplotlib", "nptdms"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]   # <-- tells setuptools your code is under src/
