[project]
name = "analysis-pipeline"
version = "0.1.0"
description = "Reusable analysis utilities for the experiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "nptdms"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]   # we keep package code under src/

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
